apps/bento-pdf/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bento-pdf
  namespace: bento-pdf
  labels:
    app: bento-pdf

spec:
  replicas: 1
  selector:
    matchLabels:
      app: bento-pdf
  template:
    metadata:
      labels:
        app: bento-pdf
    spec:
      securityContext:
        fsGroup: 101
      containers:
        - name: bento-pdf
          image: ghcr.io/alam00000/bentopdf-simple:sha-90998ed
          securityContext:
            runAsUser: 101
            runAsGroup: 101
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: nginx-tmp
              mountPath: /etc/nginx/tmp
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: nginx-tmp
          emptyDir: {}
        - name: nginx-cache
          emptyDir: {}
        - name: tmp
          emptyDir: {}
