apps/bento-pdf/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: bento-pdf
  namespace: bento-pdf
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m

spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "bento-pdf.prosto.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bento-pdf
          port: 80
